# music19

./: .coveragerc  .flake8  .gitignore  .pylintrc  .readthedocs.yaml  CLAUDE.md  README.md  analysis_example.py  benchmark_stream_performance.py  caged_scale_example.py  configure_music21_testing.py  debug_interactive.py  debug_scale_example.py  parallel_test_runner.py  pyproject.toml  pytest.ini  requirements.txt  run_all_tests_pycharm.py  run_core_tests_only.py  test_all_with_pytest.py  test_scale_in_pycharm.py  verify_local_import.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/scripts/: install_ubuntu_deps.sh
.github/workflows/: maincheck.yml
docs/: CIRCULAR_DEPENDENCIES.md  DEPENDENCY_ANALYSIS.md  STREAMS_MIXIN_ARCHITECTURE.md
music19/: __init__.py  articulations.py  bar.py  base.py  beam.py  clef.py  configure.py  corpus_bridge.py  defaults.py  derivation.py  duration.py  dynamics.py  editorial.py  environment.py  exceptions21.py  expressions.py  freezeThaw.py  harmony.py  instrument.py  interval.py  key.py  layout.py  note.py  percussion.py  pitch.py  prebase.py  repeat.py  roman.py  serial.py  sieve.py  sites.py  sorting.py  spanner.py  style.py  tablature.py  tempo.py  text.py  tie.py  tinyNotation.py  variant.py  (+3 more)
music19/alpha/: __init__.py
music19/analysis/: __init__.py  correlate.py  discrete.py  elements.py  enharmonics.py  floatingKey.py  harmonicFunction.py  metrical.py  neoRiemannian.py  patel.py  pitchAnalysis.py  reduceChords.py  reduceChordsOld.py  reduction.py  segmentByRests.py  transposition.py  windowed.py
music19/audioSearch/: __init__.py  recording.py  scoreFollower.py  transcriber.py
music19/chord/: __init__.py  (+2 more)
music21/: __init__.py  articulations.py  bar.py  base.py  beam.py  clef.py  configure.py  defaults.py  derivation.py  duration.py  dynamics.py  editorial.py  environment.py  freezeThaw.py  harmony.py  instrument.py  key.py  layout.py  note.py  percussion.py  pitch.py  prebase.py  roman.py  serial.py  sieve.py  sites.py  spanner.py  style.py  tablature.py  tempo.py  text.py  tie.py  tinyNotation.py  variant.py  voiceLeading.py  volpiano.py  volume.py
tests/: README.md  __init__.py  conftest.py  test_runner_compat.py
(+350 files in other folders)
